tree._predict() - done!

--- a/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
+++ b/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -216,7 +216,6 @@
     "            -------\n",
     "            root node of the built tree...\n",
     "        \"\"\"\n",
-    "        print '\\nfunction call'\n",
     "        nexamples, nfeatures=X.shape\n",
     "      \n",
     "        # YOUR CODE HERE\n",
@@ -228,10 +227,9 @@
     "            for fidx in xrange(X.shape[1]):\n",
     "                v, score, Xlidx, Xridx = self.evaluate_numerical_attribute(X[:, fidx], Y)\n",
     "                featscores[fidx] = score\n",
-    "                print score, \n",
+    "                \n",
     "            threshold, splitscore, lidx, ridx = self.evaluate_numerical_attribute(X[:, featscores.argmin()], Y)\n",
     "            \n",
-    "            print 'its shape =', X[lidx].shape \n",
     "            lchild = self.build_tree(X[lidx], Y[lidx], depth-1)\n",
     "            rchild = self.build_tree(X[ridx], Y[ridx], depth-1)\n",
     "            \n",
@@ -350,7 +348,11 @@
     "        \n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        if node.isleaf(): \n",
+    "            return node.klasslabel\n",
+    "        else:\n",
+    "            return self._predict(node.lchild, X) if (X[node.fidx] <= node.split) else self._predict(node.rchild, X)\n",
+    "        #raise NotImplementedError()\n",
     "\n",
     "    def __str__(self):\n",
     "        \n",
