Assignment 04 - submission stage!

--- a/Assignments/Assignment04/Assignment#3c-Decision Trees-Categorical-Variables.ipynb
+++ b/Assignments/Assignment04/Assignment#3c-Decision Trees-Categorical-Variables.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -335,35 +335,6 @@
     "        #print 'function call =', len(Y)\n",
     "        # YOUR CODE HERE\n",
     "        #print '\\n\\nNew node'\n",
-    "        purityres = self.getPurityResult(Y)\n",
-    "        if (depth == 0) or (X.shape[0] < self.exthreshold) or (purityres[0] > self.purity):\n",
-    "            node = Node(purityres[0],klasslabel=purityres[1])\n",
-    "        else: \n",
-    "            featscores = np.zeros((X.shape[1],))\n",
-    "            istested = np.zeros((X.shape[1],), dtype=bool)\n",
-    "            for i, fidx in enumerate(xrange(X.shape[1])):\n",
-    "                if len(np.unique(X[:, fidx])) > 1:\n",
-    "                    istested[i] = True\n",
-    "                    csplit, score, Xlidx, Xridx = self.evaluate_categorical_attribute(X[:, fidx], Y)\n",
-    "                    featscores[i] = score \n",
-    "                else:\n",
-    "                    istested[i] = False\n",
-    "                \n",
-    "            if np.sum(istested) == 0: \n",
-    "                node = Node(purityres[0],klasslabel=purityres[1])\n",
-    "                return node \n",
-    "            \n",
-    "            res = self.evaluate_categorical_attribute(X[:, featscores[istested == True].argmin()], Y)\n",
-    "                       \n",
-    "            #print 'unique values =', np.unique(X[:, featscores[istested==True].argmin()])\n",
-    "            #print 'spliting on the basis of =', csplit\n",
-    "            \n",
-    "            lchild = self.build_tree(X[Xlidx], Y[Xlidx],depth-1)\n",
-    "            rchild = self.build_tree(X[Xridx], Y[Xridx], depth-1)\n",
-    "            \n",
-    "            node = Node(purity=purityres[0], score=res[1], split=res[0],\n",
-    "                        fidx=featscores[istested==True].argmin())\n",
-    "            node.set_childs(lchild, rchild)\n",
     "        #raise NotImplementedError()\n",
     "        return node\n",
     "        \n",
@@ -427,7 +398,6 @@
     "            categories = set(feat)\n",
     "            splits = getSplits(categories) if len(categories) > 1 else tuple(categories)\n",
     "            freq = scipy.stats.itemfreq(Y)\n",
-    "            #classes = np.unique(Y)\n",
     "            nclasses = len(self.classes)\n",
     "            \n",
     "            # YOUR CODE HERE\n",
@@ -568,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -596,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -664,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -691,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -709,7 +679,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Automatic pdb calling has been turned OFF\n"
+      "Automatic pdb calling has been turned OFF\n",
+      "1\n",
+      "a1\n"
      ]
     },
     {
@@ -719,7 +691,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-75-dccd121737cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0massert_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0massert_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.51\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-e46a2e5447d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0massert_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0massert_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.51\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36massertAlmostEqual\u001b[0;34m(self, first, second, places, msg, delta)\u001b[0m\n\u001b[1;32m    559\u001b[0m                                                           places)\n\u001b[1;32m    560\u001b[0m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_formatMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandardMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 561\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailureException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    562\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    563\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertNotAlmostEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplaces\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: 0.35399189422691291 != 0.51 within 1 places"
      ]
@@ -733,7 +705,8 @@
     "dt.classes = np.unique(Y)\n",
     "split, gain, Xlidx, Xridx = dt.evaluate_categorical_attribute(tx,Y)\n",
     "\n",
-    "\n",
+    "print len(split)\n",
+    "print split[0]\n",
     "assert_almost_equal('a1', split[0])\n",
     "assert_almost_equal(gain, 0.51, 1)"
    ]
