Added pm2.5 and temperature info

--- a/Project/PrepareFeatureVectors.ipynb
+++ b/Project/PrepareFeatureVectors.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -58,6 +58,11 @@
     "    weatherdf['timeslot'] = weatherdf['time'].apply(totimeslot)\n",
     "    orderdf['Weather'] = (((weatherdf.groupby('timeslot')['weather'].mean()).ix[orderdf['Timeslot'].values]).values).astype(int)\n",
     "    \n",
+    "    #Adding temperature info, and pollution information. \n",
+    "    orderdf['Temperature'] = (weatherdf.groupby('timeslot')['temperature'].mean()).ix[orderdf['Timeslot'].values].values \n",
+    "    orderdf['PM2.5'] = (weatherdf.groupby('timeslot')['pm2.5'].mean()).ix[orderdf['Timeslot'].values].values\n",
+    "    \n",
+    "    #Adding Facility information\n",
     "    return orderdf\n",
     "\n",
     "def PrepareFeatureVectors(reponame):\n",
@@ -289,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -452,7 +457,7 @@
        "139d492189ae5a933122c098f63252b3       103        2  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -485,9 +490,13 @@
        "      <th>StartRegionID</th>\n",
        "      <th>Timeslot</th>\n",
        "      <th>Weather</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>PM2.5</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>OrderID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -511,6 +520,8 @@
        "      <td>23</td>\n",
        "      <td>82</td>\n",
        "      <td>2</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>232.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92c3ac9251cc9b5aab90b114a1e363be</th>\n",
@@ -523,6 +534,8 @@
        "      <td>8</td>\n",
        "      <td>59</td>\n",
        "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>186.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>abeefc3e2aec952468e2fd42a1649640</th>\n",
@@ -535,6 +548,8 @@
        "      <td>32</td>\n",
        "      <td>111</td>\n",
        "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>146.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cb31d0be64cda3cc66b46617bf49a05c</th>\n",
@@ -547,6 +562,8 @@
        "      <td>13</td>\n",
        "      <td>134</td>\n",
        "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>128.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139d492189ae5a933122c098f63252b3</th>\n",
@@ -559,6 +576,8 @@
        "      <td>27</td>\n",
        "      <td>103</td>\n",
        "      <td>2</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>154.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -605,22 +624,210 @@
        "cb31d0be64cda3cc66b46617bf49a05c  2016-01-01 22:13:27             13   \n",
        "139d492189ae5a933122c098f63252b3  2016-01-01 17:00:06             27   \n",
        "\n",
-       "                                  Timeslot  Weather  \n",
-       "OrderID                                              \n",
-       "97ebd0c6680f7c0535dbfdead6e51b4b        82        2  \n",
-       "92c3ac9251cc9b5aab90b114a1e363be        59        2  \n",
-       "abeefc3e2aec952468e2fd42a1649640       111        2  \n",
-       "cb31d0be64cda3cc66b46617bf49a05c       134        2  \n",
-       "139d492189ae5a933122c098f63252b3       103        2  "
+       "                                  Timeslot  Weather  Temperature  PM2.5  \n",
+       "OrderID                                                                  \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b        82        2         10.5  232.0  \n",
+       "92c3ac9251cc9b5aab90b114a1e363be        59        2          4.0  186.0  \n",
+       "abeefc3e2aec952468e2fd42a1649640       111        2         10.0  146.0  \n",
+       "cb31d0be64cda3cc66b46617bf49a05c       134        2          8.0  128.0  \n",
+       "139d492189ae5a933122c098f63252b3       103        2         11.0  154.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "orderdf['Temperature'] = (weatherdf.groupby('timeslot')['temperature'].mean()).ix[orderdf['Timeslot'].values].values \n",
+    "orderdf['PM2.5'] = (weatherdf.groupby('timeslot')['pm2.5'].mean()).ix[orderdf['Timeslot'].values].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DriverID</th>\n",
+       "      <th>PassengerID</th>\n",
+       "      <th>StartRegionHash</th>\n",
+       "      <th>DestRegionHash</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>StartRegionID</th>\n",
+       "      <th>Timeslot</th>\n",
+       "      <th>Weather</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>PM2.5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OrderID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>97ebd0c6680f7c0535dbfdead6e51b4b</th>\n",
+       "      <td>dd65fa250fca2833a3a8c16d2cf0457c</td>\n",
+       "      <td>ed180d7daf639d936f1aeae4f7fb482f</td>\n",
+       "      <td>4725c39a5e5f4c188d382da3910b3f3f</td>\n",
+       "      <td>3e12208dd0be281c92a6ab57d9a6fb32</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2016-01-01 13:37:23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>232.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92c3ac9251cc9b5aab90b114a1e363be</th>\n",
+       "      <td>c077e0297639edcb1df6189e8cda2c3d</td>\n",
+       "      <td>191a180f0a262aff3267775c4fac8972</td>\n",
+       "      <td>82cc4851f9e4faa4e54309f8bb73fd7c</td>\n",
+       "      <td>b05379ac3f9b7d99370d443cfd5dcc28</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2016-01-01 09:47:54</td>\n",
+       "      <td>8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>186.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abeefc3e2aec952468e2fd42a1649640</th>\n",
+       "      <td>86dbc1b68de435957c61b5a523854b69</td>\n",
+       "      <td>7029e813bb3de8cc73a8615e2785070c</td>\n",
+       "      <td>fff4e8465d1e12621bc361276b6217cf</td>\n",
+       "      <td>fff4e8465d1e12621bc361276b6217cf</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2016-01-01 18:24:02</td>\n",
+       "      <td>32</td>\n",
+       "      <td>111</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cb31d0be64cda3cc66b46617bf49a05c</th>\n",
+       "      <td>4fadfa6eeaa694742de036dddf02b0c4</td>\n",
+       "      <td>21dc133ac68e4c07803d1c2f48988a83</td>\n",
+       "      <td>4b7f6f4e2bf237b6cc58f57142bea5c0</td>\n",
+       "      <td>4b7f6f4e2bf237b6cc58f57142bea5c0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2016-01-01 22:13:27</td>\n",
+       "      <td>13</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>128.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139d492189ae5a933122c098f63252b3</th>\n",
+       "      <td>NULL</td>\n",
+       "      <td>26963cc76da2d8450d8f23fc357db987</td>\n",
+       "      <td>fc34648599753c9e74ab238e9a4a07ad</td>\n",
+       "      <td>87285a66236346350541b8815c5fae94</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2016-01-01 17:00:06</td>\n",
+       "      <td>27</td>\n",
+       "      <td>103</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>154.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          DriverID  \\\n",
+       "OrderID                                                              \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b  dd65fa250fca2833a3a8c16d2cf0457c   \n",
+       "92c3ac9251cc9b5aab90b114a1e363be  c077e0297639edcb1df6189e8cda2c3d   \n",
+       "abeefc3e2aec952468e2fd42a1649640  86dbc1b68de435957c61b5a523854b69   \n",
+       "cb31d0be64cda3cc66b46617bf49a05c  4fadfa6eeaa694742de036dddf02b0c4   \n",
+       "139d492189ae5a933122c098f63252b3                              NULL   \n",
+       "\n",
+       "                                                       PassengerID  \\\n",
+       "OrderID                                                              \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b  ed180d7daf639d936f1aeae4f7fb482f   \n",
+       "92c3ac9251cc9b5aab90b114a1e363be  191a180f0a262aff3267775c4fac8972   \n",
+       "abeefc3e2aec952468e2fd42a1649640  7029e813bb3de8cc73a8615e2785070c   \n",
+       "cb31d0be64cda3cc66b46617bf49a05c  21dc133ac68e4c07803d1c2f48988a83   \n",
+       "139d492189ae5a933122c098f63252b3  26963cc76da2d8450d8f23fc357db987   \n",
+       "\n",
+       "                                                   StartRegionHash  \\\n",
+       "OrderID                                                              \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b  4725c39a5e5f4c188d382da3910b3f3f   \n",
+       "92c3ac9251cc9b5aab90b114a1e363be  82cc4851f9e4faa4e54309f8bb73fd7c   \n",
+       "abeefc3e2aec952468e2fd42a1649640  fff4e8465d1e12621bc361276b6217cf   \n",
+       "cb31d0be64cda3cc66b46617bf49a05c  4b7f6f4e2bf237b6cc58f57142bea5c0   \n",
+       "139d492189ae5a933122c098f63252b3  fc34648599753c9e74ab238e9a4a07ad   \n",
+       "\n",
+       "                                                    DestRegionHash  Price  \\\n",
+       "OrderID                                                                     \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b  3e12208dd0be281c92a6ab57d9a6fb32   24.0   \n",
+       "92c3ac9251cc9b5aab90b114a1e363be  b05379ac3f9b7d99370d443cfd5dcc28    2.0   \n",
+       "abeefc3e2aec952468e2fd42a1649640  fff4e8465d1e12621bc361276b6217cf    9.0   \n",
+       "cb31d0be64cda3cc66b46617bf49a05c  4b7f6f4e2bf237b6cc58f57142bea5c0   11.0   \n",
+       "139d492189ae5a933122c098f63252b3  87285a66236346350541b8815c5fae94    4.0   \n",
+       "\n",
+       "                                                 Time  StartRegionID  \\\n",
+       "OrderID                                                                \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b  2016-01-01 13:37:23             23   \n",
+       "92c3ac9251cc9b5aab90b114a1e363be  2016-01-01 09:47:54              8   \n",
+       "abeefc3e2aec952468e2fd42a1649640  2016-01-01 18:24:02             32   \n",
+       "cb31d0be64cda3cc66b46617bf49a05c  2016-01-01 22:13:27             13   \n",
+       "139d492189ae5a933122c098f63252b3  2016-01-01 17:00:06             27   \n",
+       "\n",
+       "                                  Timeslot  Weather  Temperature  PM2.5  \n",
+       "OrderID                                                                  \n",
+       "97ebd0c6680f7c0535dbfdead6e51b4b        82        2         10.5  232.0  \n",
+       "92c3ac9251cc9b5aab90b114a1e363be        59        2          4.0  186.0  \n",
+       "abeefc3e2aec952468e2fd42a1649640       111        2         10.0  146.0  \n",
+       "cb31d0be64cda3cc66b46617bf49a05c       134        2          8.0  128.0  \n",
+       "139d492189ae5a933122c098f63252b3       103        2         11.0  154.0  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orderdf.head() "
    ]
   },
   {
