Added code for saving design matrices

--- a/Project/PrepareFeatureVectors.ipynb
+++ b/Project/PrepareFeatureVectors.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -62,8 +62,12 @@
     "    orderdf['Temperature'] = (weatherdf.groupby('timeslot')['temperature'].mean()).ix[orderdf['Timeslot'].values].values \n",
     "    orderdf['PM2.5'] = (weatherdf.groupby('timeslot')['pm2.5'].mean()).ix[orderdf['Timeslot'].values].values\n",
     "    \n",
-    "    #Adding Facility information\n",
-    "    return orderdf\n",
+    "    #Constructing a design matrix to store \n",
+    "    designMatrix = (orderdf.groupby(['StartRegionID', 'Timeslot', 'Weather', 'Temperature', 'PM2.5']))['DriverID'].agg({\n",
+    "                    'Demand': 'count', 'Supply': lambda x:np.sum(x!='NULL')})\n",
+    "    \n",
+    "    designMatrix.to_csv('designDay'+str(daynum)+'.csv', sep=',')\n",
+    "    return designMatrix\n",
     "\n",
     "def PrepareFeatureVectors(reponame):\n",
     "    return None\n",
@@ -828,6 +832,30 @@
    ],
    "source": [
     "orderdf.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hello=(orderdf.groupby(['StartRegionID', 'Timeslot', 'Weather', 'Temperature', 'PM2.5']))['DriverID'].agg({\n",
+    "    'Demand': 'count', 'Supply': lambda x:np.sum(x!='NULL')\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hello.to_csv('hello.csv', sep=',')"
    ]
   },
   {
