Added code for constructing design matrices for all days

--- a/Project/PrepareFeatureVectors.ipynb
+++ b/Project/PrepareFeatureVectors.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing for day = 1\n"
+      "Constructing design matrix for day = 1\n",
+      "Constructing design matrix for day = 2\n",
+      "Constructing design matrix for day = 3\n",
+      "Constructing design matrix for day = 4\n",
+      "Constructing design matrix for day = 5\n",
+      "Constructing design matrix for day = 6\n",
+      "Constructing design matrix for day = 7\n",
+      "Constructing design matrix for day = 8\n",
+      "Constructing design matrix for day = 9\n",
+      "Constructing design matrix for day = 10\n",
+      "Constructing design matrix for day = 11\n",
+      "Constructing design matrix for day = 12\n",
+      "Constructing design matrix for day = 13\n",
+      "Constructing design matrix for day = 14\n",
+      "Constructing design matrix for day = 15\n",
+      "Constructing design matrix for day = 16\n",
+      "Constructing design matrix for day = 17\n",
+      "Constructing design matrix for day = 18\n",
+      "Constructing design matrix for day = 19\n",
+      "Constructing design matrix for day = 20\n",
+      "Constructing design matrix for day = 21\n"
      ]
     }
    ],
@@ -66,15 +86,12 @@
     "    designMatrix = (orderdf.groupby(['StartRegionID', 'Timeslot', 'Weather', 'Temperature', 'PM2.5']))['DriverID'].agg({\n",
     "                    'Demand': 'count', 'Supply': lambda x:np.sum(x!='NULL')})\n",
     "    \n",
-    "    designMatrix.to_csv('designDay'+str(daynum)+'.csv', sep=',')\n",
+    "    designMatrix.to_csv(setname+'DesignMatrices/designDay'+str(daynum)+'.csv', sep=',')\n",
     "    return designMatrix\n",
     "\n",
-    "def PrepareFeatureVectors(reponame):\n",
-    "    return None\n",
-    "\n",
-    "for d in np.arange(1, 2):\n",
-    "    print 'testing for day = {}'.format(d)\n",
-    "    test=PrepareFeatureVector('./training_set/', d)"
+    "for d in np.arange(1, 21+1):\n",
+    "    print 'Constructing design matrix for day = {}'.format(d)\n",
+    "    PrepareFeatureVector('./training_set/', d)"
    ]
   },
   {
