Added code for determining best polynomial regressor

--- a/Project/initregressor.ipynb
+++ b/Project/initregressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -15,89 +15,8 @@
     "#from sklearn.model_selection import training_test_split\n",
     "#from sklean\n",
     "import os \n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((142880,), (142880,), (142880, 5))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "basepath='./training_set/DesignMatrices/'\n",
-    "fnames = [x for x in sorted(os.listdir(basepath)) if x[0]!='.']\n",
-    "#X, supply, demand = None, None, None\n",
-    "Xs, supplies, demands = [], [], []\n",
-    "for fname in fnames: \n",
-    "    table = pd.read_csv(basepath+fname)\n",
-    "    supplies.append(table['Supply'].values)\n",
-    "    demands.append(table['Demand'].values)\n",
-    "    Xs.append(table.drop(['Supply', 'Demand'], axis=1).values)\n",
-    "    \n",
-    "supply = np.concatenate(supplies)\n",
-    "demand = np.concatenate(demands)\n",
-    "X = np.concatenate(Xs)\n",
-    "\n",
-    "regions = np.unique(X[:,0])\n",
-    "timeslots = np.unique(X[:,1])\n",
-    "\n",
-    "supply.shape, demand.shape, X.shape "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def SplitByRegion(X, supply, demand, splitfrac):\n",
-    "    Xtrain, supplyTrain, demandTrain = [], [], []\n",
-    "    Xval, supplyVal, demandVal = [], [], []\n",
-    "    \n",
-    "    for r in regions: \n",
-    "        Xr, supplyr, demandr = X[X[:, 0]==r], supply[X[:, 0]==r], demand[X[:, 0]==r]\n",
-    "        \n",
-    "        randidx = np.random.choice(Xr.shape[0], Xr.shape[0], replace=False)\n",
-    "        splitidx = int(splitfrac * Xr.shape[0])\n",
-    "        \n",
-    "        Xtrain.append(Xr[randidx[:splitidx]])\n",
-    "        supplyTrain.append(supplyr[randidx[:splitidx]])\n",
-    "        demandTrain.append(demandr[randidx[:splitidx]])\n",
-    "        \n",
-    "        Xval.append(Xr[randidx[splitidx:]])\n",
-    "        supplyVal.append(supplyr[randidx[splitidx:]])\n",
-    "        demandVal.append(demandr[randidx[splitidx:]])\n",
-    "        \n",
-    "    Xtrain, supplyTrain, demandTrain = np.concatenate(Xtrain), np.concatenate(supplyTrain), np.concatenate(demandTrain)\n",
-    "    Xval, supplyVal, demandVal = np.concatenate(Xval), np.concatenate(supplyVal), np.concatenate(demandVal)\n",
-    "    \n",
-    "    return Xtrain, supplyTrain, demandTrain, Xval, supplyVal, demandVal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Xtrain, supplyTrain, demandTrain, Xval, supplyVal, demandVal = SplitByRegion(X, supply, demand, .7)"
+    "import pandas as pd\n",
+    "import utils"
    ]
   },
   {
@@ -106,31 +25,23 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Xtrain = (99981, 5), demandTrain = (99981,), supplyTrain = (99981,)\n",
-      "Xval = (42899, 5), demandVal = (42899,), supplyVal = (42899,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print 'Xtrain = {}, demandTrain = {}, supplyTrain = {}'.format(Xtrain.shape, demandTrain.shape, supplyTrain.shape)\n",
-    "print 'Xval = {}, demandVal = {}, supplyVal = {}'.format(Xval.shape, demandVal.shape, supplyVal.shape)"
+    "X, supply, demand = utils.LoadDataset('./training_set/DesignMatrices/')\n",
+    "X.shape, supply.shape, demand.shape\n",
+    "\n",
+    "X=X[:, :2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def getMAE(truths, preds): \n",
-    "    return (np.mean(np.abs(truths-preds)))"
+    "Xtrain, supplyTrain, demandTrain, Xval, supplyVal, demandVal = utils.SplitByRegion(X, supply, demand, .7)"
    ]
   },
   {
@@ -144,24 +55,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "degree = 1\tMAE = 12.4183165364\n",
-      "degree = 2\tMAE = 12.3706463812\n",
-      "degree = 3\tMAE = 12.6758991648\n",
-      "degree = 4\tMAE = 12.9602037108\n",
-      "degree = 5\tMAE = 13.1210397741\n",
-      "degree = 6\tMAE = 15.24857564\n"
+      "Xtrain = (99981L, 2L), demandTrain = (99981L,), supplyTrain = (99981L,)\n",
+      "Xval = (42899L, 2L), demandVal = (42899L,), supplyVal = (42899L,)\n"
      ]
     }
    ],
    "source": [
-    "for d in xrange(1,7):\n",
-    "    #print 'training for '.format(d)\n",
-    "    Xnew = PolynomialFeatures(degree=d).fit_transform(Xtrain)\n",
-    "    model = linear_model.LinearRegression()\n",
-    "    model = model.fit(Xnew, demandTrain-supplyTrain)\n",
+    "print 'Xtrain = {}, demandTrain = {}, supplyTrain = {}'.format(Xtrain.shape, demandTrain.shape, supplyTrain.shape)\n",
+    "print 'Xval = {}, demandVal = {}, supplyVal = {}'.format(Xval.shape, demandVal.shape, supplyVal.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getMAE(truths, preds): \n",
+    "    return (np.mean(np.abs(truths-preds)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "degree = 1\tMAE=12.3166325529\n",
+      "degree = 2\tMAE=12.2175907436\n",
+      "degree = 3\tMAE=12.3243548157\n",
+      "degree = 4\tMAE=12.6855512811\n",
+      "degree = 5\tMAE=12.6746865471\n",
+      "degree = 6\tMAE=12.6560135662\n",
+      "degree = 7\tMAE=27.4574193692\n",
+      "degree = 8\tMAE=13.2430456557\n",
+      "degree = 9\tMAE=13.2569379876\n",
+      "degree = 10\tMAE=13.3642995527\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "bestscore = np.inf\n",
+    "bestmodel, bestdeg = None, None\n",
+    "for d in np.arange(1,11):\n",
+    "    Xnew=PolynomialFeatures(degree=d).fit_transform(Xtrain)\n",
+    "    model=linear_model.LinearRegression()\n",
+    "    model.fit(Xnew, demandTrain-supplyTrain)\n",
     "    \n",
-    "    preds=model.predict(PolynomialFeatures(degree=d).fit_transform(Xval))\n",
-    "    print 'degree = {}\\tMAE = {}'.format(d, getMAE(demandVal-supplyVal, preds))"
+    "    ypreds=model.predict(PolynomialFeatures(degree=d).fit_transform(Xval))\n",
+    "    print 'degree = {}\\tMAE={}'.format(d, getMAE(demandVal-supplyVal, ypreds))\n",
+    "    \n",
+    "    if (bestscore > getMAE(demandVal-supplyVal, ypreds)):\n",
+    "        bestscore = getMAE(demandVal-supplyVal, ypreds)\n",
+    "        bestmodel = model\n",
+    "        bestdeg = d\n",
+    "\n",
+    "print bestdeg "
    ]
   },
   {
@@ -177,9 +134,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -191,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
